--- a/murale.html
+++ b/murale.html
@@ -69,14 +69,14 @@
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">Mes créations</a>
+				<a href="index.html" class="logo">Murale</a>
 			</header>
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Accueil</a></li>
-					<li class="active"><a href="generic.html">Mes créations</a></li>
+					<li class="active"><a href="murale.html">Murale</a></li>
 				</ul>
 				<ul class="icons">
 					<li><a href="https://www.facebook.com/sol.girard.35" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -89,7 +89,6 @@
 			<div id="main" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
 
 				<!--Murales-->
-				<h2 st>Murales</h2>
 				<div class="grid-container">
 
 					<div class="customCard">
@@ -239,215 +238,8 @@
 							<span class="date">2025</span>
 						</div>
 					</div>
+
 				</div>
-
-				<!--Toiles collective-->
-				<h2>Toiles collective</h2>
-				<div class="grid-container">
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/14.jpg" alt="image 14" />
-						</div>
-						<div>
-							<h4>L'attaque des monstres</h4>
-							<span class="date">2024</span>
-							<p><i>Saint malo</i></p>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/15.jpg" alt="image 15" />
-						</div>
-						<div>
-							<h4>Les avions sont l'inspiration des pigeons</h4>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/16.jpg" alt="image 16" />
-						</div>
-						<div>
-							<h4>Conte de fées</h4>
-						</div>
-					</div>
-				</div>
-
-
-				<!--Peintures-->
-				<h2>Peintures</h2>
-				<div class="grid-container">
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/17.jpg" alt="image 17" />
-						</div>
-						<div>
-							<h4>Les brocoloc</h4>
-							<span class="date">2024</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/18.jpg" alt="image 18" />
-						</div>
-						<div>
-							<h4>J'aime pas les obergines</h4>
-							<span class="date">2023</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/19.jpg" alt="image 19" />
-						</div>
-						<div>
-							<h4>Le meilleur film</h4>
-							<span class="date">2022</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/20.jpg" alt="image 20" />
-						</div>
-						<div>
-							<h4>Ma joconde</h4>
-							<span class="date">2022</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/21.jpg" alt="image 21" />
-						</div>
-						<div>
-							<h4>MSV</h4>
-							<span class="date">2024</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/22.jpg" alt="image 22" />
-						</div>
-						<div>
-							<h4>C'est pas moi</h4>
-							<span class="date">2024</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/23.jpg" alt="image 23" />
-						</div>
-						<div>
-							<h4>Le rêve d'une nuit</h4>
-							<span class="date">2024</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/24.jpg" alt="image 24" />
-						</div>
-						<div>
-							<h4>Tadam</h4>
-							<span class="date">2023</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/25.jpg" alt="image 25" />
-						</div>
-						<div>
-							<h4>Le domaine des batards</h4>
-							<span class="date">2022</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/26.jpg" alt="image 26" />
-						</div>
-						<div>
-							<h4>Je ne sais pas si vous été prêt a cette éventualité personnellement, je le suis</h4>
-							<span class="date">2024</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/27.jpg" alt="image 27" />
-						</div>
-						<div>
-							<h4>Le bien et le mal c'est relatif</h4>
-							<span class="date">2025</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/28.jpg" alt="image 28" />
-						</div>
-						<div>
-							<h4>Éclipse</h4>
-							<span class="date">2025</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/29.jpg" alt="image 29" />
-						</div>
-						<div>
-							<h4>La maison dansante</h4>
-							<span class="date">2024</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/30.jpg" alt="image 30" />
-						</div>
-						<div>
-							<h4>Nous</h4>
-							<span class="date">2025</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/31.jpg" alt="image 31" />
-						</div>
-						<div>
-							<h4>Le calme pendant la tempête</h4>
-							<span class="date">2024</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/32.jpg" alt="image 32" />
-						</div>
-						<div>
-							<h4>Tourne-sol</h4>
-							<span class="date">2025</span>
-						</div>
-					</div>
-
-					<div class="customCard">
-						<div class="image-container">
-							<img src="images/33.jpg" alt="image 33" />
-						</div>
-						<div>
-							<h4>Lobotomie</h4>
-							<span class="date">2025</span>
-						</div>
-				</div>
-
 			</div>
 
 			<!-- Footer -->
